--- a/finalproject/.vscode/tasks.json
+++ b/finalproject/.vscode/tasks.json
@@ -5,11 +5,11 @@
             "label": "C/C++: clang++ build active file",
             "command": "/usr/bin/clang++",
             "args": [
+                "-std=c++11",
                 "-fcolor-diagnostics",
                 "-fansi-escape-codes",
                 "-g",
                 "*.cpp",
-                "-std=c+11",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
